# brew

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cache.rs  config.rs  main.rs  read.rs  ui.rs
src/core/: address.rs  cache.rs  config.rs  date.rs  maildir.rs  mod.rs  read.rs  sync.rs  thread.rs
src/ui/: app.rs  compose.rs  draw.rs  editor.rs  email.rs  highlight.rs  mail.rs  mod.rs  send.rs  tab.rs  threads.rs  utils.rs
