[package]
name = "brew"
version = "2.3.2"
edition = "2024"

[[bin]]
name = "brew"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
lettre = { version = "0.11.19", features = ["smtp-transport", "native-tls", "builder"] }
mail-parser = "0.11.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting", "macros"] }
toml = "1.0.3"
notify = "7"
notify-rust = "4"
edtui = "0.11.2"
arboard = "3.6.1"
